// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'area': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "autosize": {
    "contains": "padding",
    "type": "fit-y",
  },
  "config": {
    "axis": {
      "domainColor": "#D4D4D4",
      "gridColor": "#E5E5E5",
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "tickColor": "#D4D4D4",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "axisX": {
      "grid": false,
    },
    "axisY": {
      "grid": true,
      "tickCount": {
        "expr": "min(5, ceil(height / 40))",
      },
    },
    "background": "#FFFFFF",
    "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    "legend": {
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "title": {
      "anchor": "start",
      "color": "#0A0A0A",
      "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "fontSize": 24,
      "fontWeight": 600,
    },
    "view": {
      "stroke": null,
    },
  },
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Area chart of sum of revenue by quarter.",
  "encoding": {
    "x": {
      "axis": {
        "labelExpr": "utcFormat(datum.value, {date: '%b %d'})",
      },
      "field": "quarter",
      "scale": {
        "type": "utc",
      },
      "title": "Quarter",
      "type": "temporal",
    },
    "y": {
      "aggregate": "sum",
      "field": "revenue",
      "title": "Revenue",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "color": "#3E63DD",
    "type": "area",
  },
  "title": "Area chart",
  "usermeta": {
    "oods": {
      "a11y": {
        "ariaLabel": "Area chart of Revenue by Quarter",
        "description": "Area chart of sum of revenue by quarter.",
      },
      "name": "Area chart",
      "portability": {
        "tableColumnOrder": [
          "quarter",
          "revenue",
          "region",
          "units",
        ],
      },
      "specId": "viz:area",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'bar': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "autosize": {
    "contains": "padding",
    "type": "fit-y",
  },
  "config": {
    "axis": {
      "domainColor": "#D4D4D4",
      "gridColor": "#E5E5E5",
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "tickColor": "#D4D4D4",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "axisX": {
      "grid": false,
      "labelAngle": 0,
    },
    "axisY": {
      "grid": true,
      "tickCount": {
        "expr": "min(5, ceil(height / 40))",
      },
    },
    "background": "#FFFFFF",
    "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    "legend": {
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "title": {
      "anchor": "start",
      "color": "#0A0A0A",
      "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "fontSize": 24,
      "fontWeight": 600,
    },
    "view": {
      "stroke": null,
    },
  },
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Bar chart of sum of revenue by region.",
  "encoding": {
    "x": {
      "field": "region",
      "scale": {
        "type": "band",
      },
      "title": "Region",
      "type": "ordinal",
    },
    "y": {
      "aggregate": "sum",
      "field": "revenue",
      "title": "Revenue",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "color": "#3E63DD",
    "type": "bar",
    "width": {
      "expr": "min(48, bandwidth('x'))",
    },
  },
  "title": "Bar chart",
  "usermeta": {
    "oods": {
      "a11y": {
        "ariaLabel": "Bar chart of Revenue by Region",
        "description": "Bar chart of sum of revenue by region.",
      },
      "name": "Bar chart",
      "portability": {
        "tableColumnOrder": [
          "region",
          "revenue",
          "quarter",
          "units",
        ],
      },
      "specId": "viz:bar",
    },
  },
  "width": 400,
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'heatmap': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "config": {
    "axis": {
      "domainColor": "#D4D4D4",
      "gridColor": "#E5E5E5",
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "tickColor": "#D4D4D4",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "axisX": {
      "grid": false,
    },
    "axisY": {
      "grid": false,
    },
    "background": "#FFFFFF",
    "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    "legend": {
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "title": {
      "anchor": "start",
      "color": "#0A0A0A",
      "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "fontSize": 24,
      "fontWeight": 600,
    },
    "view": {
      "stroke": null,
    },
  },
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Heatmap of quarter by region, split by revenue.",
  "encoding": {
    "color": {
      "field": "revenue",
      "scale": {
        "range": [
          "#E5EBFA",
          "#B5CAFC",
          "#87A8FB",
          "#5E85F1",
          "#3D62DB",
          "#2543B7",
          "#142989",
          "#081555",
          "#020523",
        ],
        "type": "linear",
      },
      "title": "Revenue",
      "type": "quantitative",
    },
    "x": {
      "field": "region",
      "scale": {
        "type": "band",
      },
      "title": "Region",
      "type": "ordinal",
    },
    "y": {
      "field": "quarter",
      "scale": {
        "type": "band",
      },
      "title": "Quarter",
      "type": "ordinal",
    },
  },
  "mark": {
    "type": "rect",
  },
  "title": "Heatmap",
  "usermeta": {
    "oods": {
      "a11y": {
        "ariaLabel": "Heatmap of Quarter by Region",
        "description": "Heatmap of quarter by region, split by revenue.",
      },
      "name": "Heatmap",
      "portability": {
        "tableColumnOrder": [
          "region",
          "quarter",
          "revenue",
          "units",
        ],
      },
      "specId": "viz:heatmap",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'line': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "autosize": {
    "contains": "padding",
    "type": "fit-y",
  },
  "config": {
    "axis": {
      "domainColor": "#D4D4D4",
      "gridColor": "#E5E5E5",
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "tickColor": "#D4D4D4",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "axisX": {
      "grid": false,
    },
    "axisY": {
      "grid": true,
      "tickCount": {
        "expr": "min(5, ceil(height / 40))",
      },
    },
    "background": "#FFFFFF",
    "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    "legend": {
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "title": {
      "anchor": "start",
      "color": "#0A0A0A",
      "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "fontSize": 24,
      "fontWeight": 600,
    },
    "view": {
      "stroke": null,
    },
  },
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Line chart of sum of revenue by quarter, split by region.",
  "encoding": {
    "color": {
      "field": "region",
      "scale": {
        "range": [
          "#3E63DD",
          "#B98E00",
          "#800883",
          "#0C7B2D",
          "#7B0008",
          "#00A3B3",
        ],
      },
      "title": "Region",
      "type": "nominal",
    },
    "x": {
      "axis": {
        "labelExpr": "utcFormat(datum.value, {date: '%b %d'})",
      },
      "field": "quarter",
      "scale": {
        "type": "utc",
      },
      "title": "Quarter",
      "type": "temporal",
    },
    "y": {
      "aggregate": "sum",
      "field": "revenue",
      "title": "Revenue",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "strokeWidth": 2.5,
    "type": "line",
  },
  "title": "Line chart",
  "usermeta": {
    "oods": {
      "a11y": {
        "ariaLabel": "Line chart of Revenue by Quarter",
        "description": "Line chart of sum of revenue by quarter, split by region.",
      },
      "name": "Line chart",
      "portability": {
        "tableColumnOrder": [
          "quarter",
          "revenue",
          "region",
          "units",
        ],
      },
      "specId": "viz:line",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > 'scatter': viz.render produces a spec that compiles, parses, draws, and keeps its data 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "autosize": {
    "contains": "padding",
    "type": "fit-y",
  },
  "config": {
    "axis": {
      "domainColor": "#D4D4D4",
      "gridColor": "#E5E5E5",
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "tickColor": "#D4D4D4",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "axisX": {
      "grid": false,
    },
    "axisY": {
      "grid": true,
      "tickCount": {
        "expr": "min(5, ceil(height / 40))",
      },
    },
    "background": "#FFFFFF",
    "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    "legend": {
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "title": {
      "anchor": "start",
      "color": "#0A0A0A",
      "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "fontSize": 24,
      "fontWeight": 600,
    },
    "view": {
      "stroke": null,
    },
  },
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Scatter plot of units by revenue, split by region.",
  "encoding": {
    "color": {
      "field": "region",
      "scale": {
        "range": [
          "#3E63DD",
          "#B98E00",
          "#800883",
          "#0C7B2D",
          "#7B0008",
          "#00A3B3",
        ],
      },
      "title": "Region",
      "type": "nominal",
    },
    "x": {
      "field": "revenue",
      "scale": {
        "type": "linear",
      },
      "title": "Revenue",
      "type": "quantitative",
    },
    "y": {
      "field": "units",
      "scale": {
        "type": "linear",
      },
      "title": "Units",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "filled": true,
    "opacity": 0.85,
    "size": 60,
    "type": "point",
  },
  "title": "Scatter plot",
  "usermeta": {
    "oods": {
      "a11y": {
        "ariaLabel": "Scatter plot of Units by Revenue",
        "description": "Scatter plot of units by revenue, split by region.",
      },
      "name": "Scatter plot",
      "portability": {
        "tableColumnOrder": [
          "revenue",
          "units",
          "region",
          "quarter",
        ],
      },
      "specId": "viz:scatter",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > explicit color range (F5): the agent-supplied scale wins over the baked OODS palette and stays renderable 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
  "autosize": {
    "contains": "padding",
    "type": "fit-y",
  },
  "config": {
    "axis": {
      "domainColor": "#D4D4D4",
      "gridColor": "#E5E5E5",
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "tickColor": "#D4D4D4",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "axisX": {
      "grid": false,
    },
    "axisY": {
      "grid": true,
      "tickCount": {
        "expr": "min(5, ceil(height / 40))",
      },
    },
    "background": "#FFFFFF",
    "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    "legend": {
      "labelColor": "#525252",
      "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "titleColor": "#0A0A0A",
      "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
    },
    "title": {
      "anchor": "start",
      "color": "#0A0A0A",
      "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "fontSize": 24,
      "fontWeight": 600,
    },
    "view": {
      "stroke": null,
    },
  },
  "data": {
    "values": [
      {
        "quarter": "2024-01",
        "region": "North",
        "revenue": 120000,
        "units": 340,
      },
      {
        "quarter": "2024-01",
        "region": "South",
        "revenue": 135000,
        "units": 410,
      },
      {
        "quarter": "2024-02",
        "region": "North",
        "revenue": 128000,
        "units": 360,
      },
      {
        "quarter": "2024-02",
        "region": "South",
        "revenue": 142000,
        "units": 430,
      },
      {
        "quarter": "2024-03",
        "region": "North",
        "revenue": 131000,
        "units": 372,
      },
      {
        "quarter": "2024-03",
        "region": "South",
        "revenue": 150000,
        "units": 455,
      },
    ],
  },
  "description": "Line chart of sum of revenue by quarter, split by region.",
  "encoding": {
    "color": {
      "field": "region",
      "scale": {
        "range": [
          "#264653",
          "#E76F51",
        ],
      },
      "title": "Region",
      "type": "nominal",
    },
    "x": {
      "axis": {
        "labelExpr": "utcFormat(datum.value, {date: '%b %d'})",
      },
      "field": "quarter",
      "scale": {
        "type": "utc",
      },
      "title": "Quarter",
      "type": "temporal",
    },
    "y": {
      "aggregate": "sum",
      "field": "revenue",
      "title": "Revenue",
      "type": "quantitative",
    },
  },
  "height": 300,
  "mark": {
    "strokeWidth": 2.5,
    "type": "line",
  },
  "title": "Line chart",
  "usermeta": {
    "oods": {
      "a11y": {
        "ariaLabel": "Line chart of Revenue by Quarter",
        "description": "Line chart of sum of revenue by quarter, split by region.",
      },
      "name": "Line chart",
      "portability": {
        "tableColumnOrder": [
          "quarter",
          "revenue",
          "region",
          "units",
        ],
      },
      "specId": "viz:line",
    },
  },
}
`;

exports[`viz.render render fidelity (renderable, not just AJV-valid) > suggest mode (no chartType): the data-aware pick is renderable and golden-locked at the render boundary 1`] = `
{
  "chartType": "line",
  "mark": "MarkLine",
  "spec": {
    "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
    "autosize": {
      "contains": "padding",
      "type": "fit-y",
    },
    "config": {
      "axis": {
        "domainColor": "#D4D4D4",
        "gridColor": "#E5E5E5",
        "labelColor": "#525252",
        "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
        "tickColor": "#D4D4D4",
        "titleColor": "#0A0A0A",
        "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      },
      "axisX": {
        "grid": false,
      },
      "axisY": {
        "grid": true,
        "tickCount": {
          "expr": "min(5, ceil(height / 40))",
        },
      },
      "background": "#FFFFFF",
      "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      "legend": {
        "labelColor": "#525252",
        "labelFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
        "titleColor": "#0A0A0A",
        "titleFont": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
      },
      "title": {
        "anchor": "start",
        "color": "#0A0A0A",
        "font": "Geist, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif",
        "fontSize": 24,
        "fontWeight": 600,
      },
      "view": {
        "stroke": null,
      },
    },
    "data": {
      "values": [
        {
          "quarter": "2024-01",
          "region": "North",
          "revenue": 120000,
          "units": 340,
        },
        {
          "quarter": "2024-01",
          "region": "South",
          "revenue": 135000,
          "units": 410,
        },
        {
          "quarter": "2024-02",
          "region": "North",
          "revenue": 128000,
          "units": 360,
        },
        {
          "quarter": "2024-02",
          "region": "South",
          "revenue": 142000,
          "units": 430,
        },
        {
          "quarter": "2024-03",
          "region": "North",
          "revenue": 131000,
          "units": 372,
        },
        {
          "quarter": "2024-03",
          "region": "South",
          "revenue": 150000,
          "units": 455,
        },
      ],
    },
    "description": "Line chart of revenue by quarter, split by region.",
    "encoding": {
      "color": {
        "field": "region",
        "scale": {
          "range": [
            "#3E63DD",
            "#B98E00",
            "#800883",
            "#0C7B2D",
            "#7B0008",
            "#00A3B3",
          ],
          "type": "band",
        },
        "title": "Region",
        "type": "nominal",
      },
      "x": {
        "axis": {
          "labelExpr": "utcFormat(datum.value, {date: '%b %d'})",
        },
        "field": "quarter",
        "scale": {
          "type": "utc",
        },
        "title": "Quarter",
        "type": "temporal",
      },
      "y": {
        "field": "revenue",
        "scale": {
          "type": "linear",
        },
        "title": "Revenue",
        "type": "quantitative",
      },
    },
    "height": 300,
    "mark": {
      "strokeWidth": 2.5,
      "type": "line",
    },
    "title": "Line chart",
    "usermeta": {
      "oods": {
        "a11y": {
          "ariaLabel": "Line chart of Revenue by Quarter",
          "description": "Line chart of revenue by quarter, split by region.",
        },
        "name": "Line chart",
        "portability": {
          "tableColumnOrder": [
            "quarter",
            "revenue",
            "region",
            "units",
          ],
        },
        "specId": "viz:line",
      },
    },
  },
}
`;
